# spamoverflow-larsmoan

./: .gitignore  .terraform.lock.hcl  Dockerfile.deploy  Dockerfile.dev  README.md  autoscaling.tf  db.tf  docker-compose.yml  ecs.tf  endpoints.http  lb.tf  local.sh  main.tf  pyproject.toml
app/: Dockerfile  docker-compose.yml  endpoints.http  pyproject.toml
app/spamoverflow/: __init__.py
app/spamoverflow/models/: spamoverflow.py
app/spamoverflow/tasks/: periodic_tasks.py
app/spamoverflow/utils/: utils.py
app/spamoverflow/views/: routes.py
app/utils/: utils.py
spamoverflow/: __init__.py
spamoverflow/models/: spamoverflow.py
spamoverflow/utils/: utils.py
spamoverflow/views/: routes.py
