[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Lars Moan <lars.ostberg.moan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
sqlalchemy = "^2.0.28"
shortuuid = "^1.0.13"
flask-sqlalchemy = "^3.1.1"
jsonschema = "^4.21.1"
flask-caching = "^2.1.0"
rfc3339-validator = "^0.1.4"
pendulum = "^3.0.0"
psycopg2 = "^2.9.3"
gunicorn = "*"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
